# DNS-Probe

./: .gitattributes  .gitignore  AGENT_MIN_DEPLOY.md  DEPLOY.md  README.md  pyproject.toml  requirements_deploy.txt
apps/agent/: client.py  main.py  probe.py
apps/api/: main.py
apps/api/routers/: __init__.py  alerts.py  dashboard.py  dns_servers.py  nodes.py  records.py  tasks.py  web.py
apps/api/schemas/: __init__.py  common.py
apps/api/static/: .gitkeep
apps/api/static/css/: app.css
apps/api/static/js/: app.js
apps/web/templates/: _task_form.html  alert_detail.html  alerts.html  base.html  dashboard.html  dns_server_edit.html  dns_servers.html  node_edit.html  nodes.html  task_detail.html  task_edit.html  task_new.html  tasks.html
data/logs/: api.log.2026-03-24
requeriment/: DNS探测_UI融合版.md  云智慧事件中心接收第三方平台告警信息需求厂商推送告警信息格式--API接口文档.docx
scripts/: cleanup_db.py  deploy.sh  init_db.py  logrotate_dns_probe.conf  pack_on_server.sh  run_dev.py  seed_demo.py  set-db-password.sh
tests/: conftest.py  test_agent_auth.py  test_agent_main.py  test_health.py  test_node_status.py  test_probe.py  test_routes.py  test_yunzhi.py
